[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Hossain Al Mahdi <hame.mahadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
streamkit = "^0.3.2"
folium = "^0.16.0"
streamlit-folium = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
